bugfix reported by Bartman: follow button was disappearing and not visible enough.

--- a/src/componentes/follow-button.css
+++ b/src/componentes/follow-button.css
@@ -1,4 +1,5 @@
 .FollowButton  { 
+    width: 100%; 
     background: #fcdd5f;
     border: 1px solid #ffcb11;
     padding: 3px 10px;
@@ -75,3 +76,11 @@
     left: -7px;
     top: 50%;
 }
+
+.follow-widget {
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    justify-content: space-evenly;
+    align-items: center;
+} 
